--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://54.176.50.10:5432/financial
+spring.datasource.name=
+spring.datasource.username=postgres
+spring.datasource.password=helloworld
