changes to the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://54.176.50.10:5432/financial
 spring.datasource.name=
-spring.datasource.username=postgres
-spring.datasource.password=helloworld
+spring.datasource.url=jdbc:postgresql://dpg-co656d7109ks73doi07g-a.ohio-postgres.render.com:5432/postgrss
+
+spring.datasource.username=postgrss_user
+spring.datasource.password=GhsxpIExW7Q2n93WBLCrio8IjVDLh5Pe
 
